--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,20 @@
   <body onload="pageLoad()">
 
       <div id="content">
+        
+        <div id="chat">
+            <h1>Say a message</h1>
+            <input type="text" id="chattext">
+        </div>
 
-          <div id="avatarPicker"></div>
-          <canvas id="avatarCanvas" style="display:none;">
+        <div id="canvasDiv">
+            <canvas id="avatarCanvas" width="1024" height="768"></canvas>
+        </div>
+
+        <div id="avatarPicker"></div>
 
       </div>
+
 
   </body>
 
