Started work on tiles.

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <body onload="pageLoad()">
 
       <div id="content">
-        
+
         <div id="chat">
             <h1>Say a message</h1>
             <input type="text" id="chattext">
@@ -22,6 +22,8 @@
         </div>
 
         <div id="avatarPicker"></div>
+
+        <div id="tilesDiv"></div>
 
       </div>
 
