Progress to full screen

--- a/client/index.html
+++ b/client/index.html
@@ -10,15 +10,13 @@
 
   <body onload="pageLoad()">
 
+      <canvas id="avatarCanvas"></canvas>
+
       <div id="content">
 
         <div id="chat">
             <h1>Say a message</h1>
             <input type="text" id="chattext">
-        </div>
-
-        <div id="canvasDiv">
-            <canvas id="avatarCanvas" width="1024" height="768"></canvas>
         </div>
 
         <div id="avatarPicker"></div>
