--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,13 @@
   <head>
     <title>WebSocket Powererd Avatars</title>
     <link rel="stylesheet" type="text/css" href="/client/styles.css">
-    <script src="/client/client.js"></script>
+    <script src="/client/setup.js"></script>
+    <script src="/client/websocket.js"></script>
+    <script src="/client/inputs.js"></script>
+    <script src="/client/ui.js"></script>
+    <script src="/client/avatars.js"></script>
+    <script src="/client/frame.js"></script>
+    <script src="/client/render.js"></script>
   </head>
 
   <body onload="pageLoad()">
