Renamed avatars to entities

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <script src="/client/websocket.js"></script>
     <script src="/client/inputs.js"></script>
     <script src="/client/ui.js"></script>
-    <script src="/client/avatars.js"></script>
+    <script src="/client/entities.js"></script>
     <script src="/client/frame.js"></script>
     <script src="/client/render.js"></script>
   </head>
