New entity interface

--- a/client/index.html
+++ b/client/index.html
@@ -23,11 +23,22 @@
           <input type="text" id="chattext">
       </div>
 
+      <div id="newentity">
+          <h1>Create an entity</h1>
+          <h3>Script when entity spawns</h3>
+          <textarea id="spawn"></textarea>
+          <h3>Script to run every server tick (0.1s)</h3>
+          <textarea id="script"></textarea>
+          <div>
+              <button id="newentitybutton">Confirm</button>
+          </div>
+      </div>
+
       <div id="content">
 
         <div id="avatarPicker"></div>
-
         <div id="tilesDiv"></div>
+        <div id="itemsDiv"></div>
 
       </div>
 
