More entity work

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
 
       <div id="newentity">
           <h1>Create an entity</h1>
+          <select id="recentScripts"></select>
           <h3>Script when entity spawns</h3>
           <textarea id="spawn"></textarea>
           <h3>Script to run every server tick (0.1s)</h3>
