--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <head>
     <title>WebSocket Powererd Avatars</title>
     <link rel="stylesheet" type="text/css" href="/client/styles.css">
+    <script src="/client/demoscripts.js"></script>
     <script src="/client/setup.js"></script>
     <script src="/client/websocket.js"></script>
     <script src="/client/inputs.js"></script>
